@@ -5,8 +5,8 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)/usr/ucb/grap.sl	5.4 (gritter) 11/27/05";
-const char version[] = "version Dec 30, 1995	5.4 (gritter) 11/27/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/grap.sl	5.5 (gritter) 12/5/05";
+const char version[] = "version Dec 30, 1995	5.5 (gritter) 12/5/05";
 /* SLIST */
 /*
 coord.c:	Sccsid @(#)coord.c	1.3 (gritter) 10/18/05	
@@ -14,14 +14,14 @@ for.c:	Sccsid @(#)for.c	1.3 (gritter) 10/18/05
 frame.c:	Sccsid @(#)frame.c	1.3 (gritter) 10/18/05	
 grap.c:	Sccsid @(#)grap.y	1.3 (gritter) 10/18/05	
 grap.c: * Sccsid @(#)yaccpar	1.5 (gritter) 11/26/05
-grap.h:	Sccsid @(#)grap.h	1.4 (gritter) 10/25/05	
+grap.h:	Sccsid @(#)grap.h	1.5 (gritter) 12/5/05	
 grap.y:	Sccsid @(#)grap.y	1.3 (gritter) 10/18/05	
 grapl.c:	Sccsid @(#)grapl.l	1.4 (gritter) 11/22/05	
 grapl.c: * Sccsid @(#)ncform	1.4 (gritter) 11/18/05
 grapl.l:	Sccsid @(#)grapl.l	1.4 (gritter) 11/22/05	
-input.c:	Sccsid @(#)input.c	1.4 (gritter) 10/19/05	
+input.c:	Sccsid @(#)input.c	1.5 (gritter) 12/5/05	
 label.c:	Sccsid @(#)label.c	1.2 (gritter) 10/18/05	
-main.c:	Sccsid @(#)main.c	1.4 (gritter) 11/5/05	
+main.c:	Sccsid @(#)main.c	1.5 (gritter) 12/5/05	
 misc.c:	Sccsid @(#)misc.c	1.3 (gritter) 10/18/05	
 plot.c:	Sccsid @(#)plot.c	1.3 (gritter) 10/18/05	
 print.c:	Sccsid @(#)print.c	1.3 (gritter) 10/18/05	
